--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -54,7 +54,7 @@
                       <label class="form-label">Category</label>
                       <select class="form-select" value="<%= product.category %>" name="category" id="category">
                         <% category.forEach(function(item) { %>
-                        <option> <%= item.name %> </option>
+                        <option> <%= item.category %> </option>
                         <% }); %>
                       </select>
                       <p id="error6" class="text-danger"></p>
