--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -42,7 +42,7 @@
                   <!-- <span class="old-price">$245.8</span> -->
                 </div>
                 <div class="product-action-1 show">
-                  <a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                  <a aria-label="Add To Cart" class="action-btn hover-up" href="#" onclick="addToCart('<%=item.id%>')"><i class="fi-rs-shopping-bag-add"></i></a>
                 </div>
               </div>
             </div>
@@ -66,3 +66,20 @@
       </div>
     </div>
 </section>
+
+<script>
+  function addToCart(proId){
+    $.ajax({
+      url : '/add-to-cart/' + proId,
+      method : 'POST',
+      data : {
+        proId : proId
+      },
+      success:(response)=>{
+        if(response.status){
+          location.reload()
+        }
+      }
+    })
+  }
+</script>
