--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -52,7 +52,7 @@
                   <span> or</span>
                 </div>
 
-                <div class="text-muted text-center">Already have an account? <a href="#">Login now</a></div>
+                <div class="text-muted text-center">Already have an account? <a href="/login">Login now</a></div>
               </div>
             </div>
           </div>
