--- a/views/partials/userHeader.ejs
+++ b/views/partials/userHeader.ejs
@@ -1,56 +1,7 @@
+
+
 <header class="header-area header-style-1 header-height-2">
-  <div class="header-top header-top-ptb-1 d-none d-lg-block">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-xl-3 col-lg-4">
-          <div class="header-info">
-            <ul>
-              <li><i class="fi-rs-smartphone"></i> <a href="#">(+01) - 2345 - 6789</a></li>
-              <li><i class="fi-rs-marker"></i><a href="page-contact.html">Our location</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-xl-6 col-lg-4">
-          <div class="text-center">
-            <div id="news-flash" class="d-inline-block">
-              <ul>
-                <li>Get great devices up to 50% off <a href="shop-grid-right.html">View details</a>
-                </li>
-                <li>Supper Value Deals - Save more with coupons</li>
-                <li>Trendy 25silver jewelry, save up 35% off today <a href="shop-grid-right.html">Shop now</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-4">
-          <div class="header-info header-info-right">
-            <ul>
-              <li>
-                <a class="language-dropdown-active" href="#"> <i class="fi-rs-world"></i> English <i class="fi-rs-angle"></i></a>
-                <!-- <ul class="language-dropdown">
-                  <li><a href="#"><img src="/frontEnd/imgs/theme/flag-fr.png" alt="">Français</a>
-                  </li>
-                  <li><a href="#"><img src="/frontEnd/imgs/theme/flag-dt.png" alt="">Deutsch</a></li>
-                  <li><a href="#"><img src="/frontEnd/imgs/theme/flag-ru.png" alt="">Pусский</a></li>
-                </ul> -->
-              </li>
-              <% if(locals.user){ %>
-              <li><i class="fi-rs-user"></i><%= user.name %><a></a>
-              </li>
-              <li><i class="fi-rs-user"></i><a href="/logout">Logout </a>
-              </li>
-              <% }else{ %>
-              <li><i class="fi-rs-user"></i><a href="/login">Log In </a>
-              </li>
-              <li><i class="fi-rs-user"></i><a href="/signup"> Sign Up</a>
-              </li>
-              <% } %>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  
   <div class="header-middle header-middle-ptb-1 d-none d-lg-block">
     <div class="container">
       <div class="header-wrap">
@@ -84,6 +35,8 @@
                   <span class="pro-count blue">4</span>
                 </a>
               </div>
+            
+             
               <div class="header-action-icon-2">
                 <% if (locals.user) { %>
                   <a class="mini-cart-icon" href="/cart-list">
@@ -91,7 +44,7 @@
                     <span class="pro-count blue"><%=count%></span>
                   </a>
                 <% } %>
-                <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2"> -->
                   <!-- <ul>
                       <li>
                         <div class="shopping-cart-img">
@@ -127,10 +80,32 @@
                         <a href="shop-checkout.html">Checkout</a>
                       </div>
                     </div> -->
-                </div>
+                <!-- </div> -->
               </div>
             </div>
           </div>
+
+          <div class="header-action-right ml-30">
+            <% if (locals.user) { %>
+            
+              <a href="/logout"> <i class="fas fa-right-from-bracket fa-2x"></i></a>
+         
+             
+               <% } else { %>
+                 
+                
+                 <a href="/login"><i class="fas fa-right-to-bracket fa-2x"></i></a>
+                 
+             <% } %>
+          </div>
+
+          <div class="header-action-right ml-10">
+            <% if (locals.user) { %>
+            
+         <a href="/get-profile"><i class="fa-solid fa-user fa-2x"></i></a> 
+
+          <% } %>
+        </div>
         </div>
       </div>
     </div>
