--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -53,38 +53,36 @@
                 </tr>
               </thead>
               <tbody>
-                <tr><% cartItems.forEach(function(item) { %>
+                <tr><% cartItems.forEach(function(item,index) { %>
 
-             
-              
+
+
                   <td class="image"><img src="/productImages/<%=item.carted.img[0]%>" alt="#"></td>
                   <td class="product-des">
                     <h5 class="product-name"><a href="shop-product-right.html"></a></h5>
-                    <p class="font-xs"><%=item.carted.name%><br> 
+                    <p class="font-xs"><%=item.carted.name%><br>
                     </p>
                   </td>
                   <td class="price" data-title="Price"><span>₹<%=item.carted.price%></span></td>
                   <td class="text-center" data-title="Stock">
-                    <div id="quantity" class="detail-qty border radius  m-auto">
-                      <a href="#" class="qty-down"><i class="fi-rs-angle-small-down" ></i></a>
-                      <span class="qty-val"><%=item.quantity%></span>
-                      <span class="productId" hidden><%= item.carted._id %></span>
-                      <span class="userId" hidden><%= user._id %></span>
-                      <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
+                    <div class="detail-qty border radius m-auto">
+                      <button class="qty-btn" onclick="changeQuantity('<%= item._id %>','<%=item.item%>','<%=user._id%>','<%=index%>',-1)"><i class="fi-rs-angle-small-down"></i></button>
+                      <span id="qty-val-<%= item.item %>" class="qty-val"><%= item.quantity %></span>
+                      <button class="qty-btn" onclick="changeQuantity('<%= item._id %>','<%=item.item%>','<%=user._id%>','<%=index%>',1)"><i class="fi-rs-angle-small-up"></i></button>
                     </div>
                   </td>
+
                   <td class="text-right" data-title="Cart">
-                    <span>₹<%= item.quantity * item.carted.price %></span>
+                   <span id="subTotal-<%=item.item%>" class="subTotalVal">₹<%=subTotal.totals[index]%></span> 
                   </td>
-                  <td class="action" data-title="Remove"><a href="#" class="text-muted"><i class="fi-rs-trash"></i></a></td>
+                  <td class="action" data-title="Remove"><a href="#" class="text-muted" onclick="deleteProduct('<%=item._id%>','<%=item.item%>')"><i class="fi-rs-trash"></i></a></td>
                 </tr>
                 <% }); %>
               </tbody>
             </table>
           </div>
           <div class="cart-action text-end">
-            <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a>
-            <a class="btn "><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
+            <a class="btn " href="/shop"><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
           </div>
           <div class="divider center_icon mt-50 mb-50"><i class="fi-rs-fingerprint"></i></div>
           <div class="row mb-50">
@@ -110,42 +108,151 @@
                   </div>
                 </div>
               </div> -->
-            </div>
-            <div class="col-lg-6 col-md-12">
-              <div class="border p-md-4 p-30 border-radius cart-totals">
-                <div class="heading_s1 mb-3">
-                  <h4>Cart Totals</h4>
-                </div>
-                <div class="table-responsive">
-                  <table class="table">
-                    <tbody>
-                      <tr>
-                        <td class="cart_total_label">Cart Subtotal</td>
-                     
-                        <td class="cart_total_amount"><span class="font-lg fw-900 text-brand">₹<%=total %></span></td>
-                      
-                      </tr>
-                      <tr>
-                        <td class="cart_total_label">Shipping</td>
-                        <td class="cart_total_amount"> <i class="ti-gift mr-5"></i> Free Shipping</td>
-                      </tr>
-                      <tr>
-                        <td class="cart_total_label">Total</td>
-                        
-                        <td class="cart_total_amount"><strong><span class="font-xl fw-900 text-brand">₹<%=total %></span></strong></td>
-                      
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <a href="#" class="btn "> <i class="fi-rs-box-alt mr-10"></i> Proceed To CheckOut</a>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <div class="border p-md-4 p-30 border-radius cart-totals">
+              <div class="heading_s1 mb-3">
+                <h4>Cart Totals</h4>
               </div>
+              <div class="table-responsive">
+                <table class="table">
+                  <tbody>
+                    <tr>
+                      <td class="cart_total_label">Cart Subtotal</td>
+
+                      <td class="cart_total_amount">₹<span class="font-lg fw-900 text-brand" id="total"><%=total %></span></td>
+
+                    </tr>
+                    <tr>
+                      <td class="cart_total_label">Shipping</td>
+                      <td class="cart_total_amount"> <i class="ti-gift mr-5"></i> Free Shipping</td>
+                    </tr>
+                    <tr>
+                      <td class="cart_total_label">Total</td>
+
+                      <td class="cart_total_amount">₹<strong><span class="font-xl fw-900 text-brand" id="total"><%=total %></span></strong></td>
+
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <a href="/check-out" class="btn "> <i class="fi-rs-box-alt mr-10"></i> Proceed To CheckOut</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
 </main>
+<style>
+  .qty-btn {
+    background-color: #f8f8f8;
+    border: none;
+    color: #555;
+    cursor: pointer;
+    font-size: 14px;
+    padding: 5px 10px;
+  }
+
+</style>
+
+<script>
+  //to change the quantity of products in cart
+
+  function changeQuantity(cartId, proId, userId, index, count) {
+    const quantity = document.getElementById(`qty-val-${proId}`).innerHTML;
+    const subTotal = document.getElementById(`subTotal-${proId}`).innerText;
+    console.log(index,'index')
+    count = parseInt(count)
+    if (quantity == 1 && count == -1) {
+      Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!',
+        timer: 3000
+      }).then((result) => {
+        if (result.isConfirmed) {
+          $.ajax({
+            url: '/change-product-quantity',
+            method: 'PATCH',
+            data: {
+              cartId: cartId,
+              proId: proId,
+              userId: userId,
+              count: count,
+              quantity: quantity
+            },
+            success: (response) => {
+              console.log(response.status,'ll');
+              if (response.status) {
+                location.reload()
+
+              }
+            }
+          })
+        }
+      })
+    } else {
+      $.ajax({
+        url: '/change-product-quantity',
+        method: 'PATCH',
+        data: {
+          cartId: cartId,
+          proId: proId,
+          userId: userId,
+          count: count,
+          quantity: quantity
+        },
+        success: (response) => {
+          if (response.status) {
+            const qtyElem = document.querySelector(`#qty-val-${proId}`);
+            qtyElem.innerText = response.newQuantity;
+            const subTotalVal = document.querySelector(`#subTotal-${proId}`);
+            subTotalVal.innerText = '₹' + response.subTotal.totals[index];
+            document.getElementById('total').innerHTML = response.total
+            // location.reload()
+          }
+        }
+      })
+    }
+
+  }
 
 
+  //to delete the product from cart
+
+  function deleteProduct(cartId, proId) {
+    Swal.fire({
+      title: 'Are you sure?',
+      text: "You won't be able to revert this!",
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!',
+      timer: 3000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/delete-product-cart',
+          method: 'DELETE',
+          data: {
+            cartId: cartId,
+            proId: proId
+          },
+          success: (response) => {
+            if (response.status) {
+              location.reload()
+            }
+          }
+        })
+      }
+    })
+
+  }
+</script>
