--- a/views/adminLayout.ejs
+++ b/views/adminLayout.ejs
@@ -16,6 +16,9 @@
   <meta property="og:image" content="">
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/backEnd/imgs/theme/favicon.svg">
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
   <!-- Template CSS -->
   <link href="/backEnd/css/main.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -23,6 +26,8 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </head>
 
 <body>
