--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -89,7 +89,7 @@
                 <tbody>
                   <tr>
 
-                  <tr><% cartItems.forEach(function(item) { %>
+                  <tr><% cartItems?.forEach(function(item) { %>
 
                     <td class="image product-thumbnail"><img src="/productImages/<%=item.carted.img[0]%>" alt="#"></td>
                     <td>
@@ -130,17 +130,24 @@
                   </div>
                 </div> -->
                 <div class="custome-radio">
-                  <input class="form-check-input" required="" type="radio" name="payment_option" value="COD" id="exampleRadios4" checked="">
-                  <label class="form-check-label" for="exampleRadios4" data-bs-toggle="collapse" data-target="#checkPayment" aria-controls="checkPayment">COD</label>
+                  <input class="form-check-input" required="" type="radio" name="payment_option" value="COD" id="exampleRadios1" checked="">
+                  <label class="form-check-label" for="exampleRadios1" data-bs-toggle="collapse" data-target="#checkPayment" aria-controls="checkPayment">COD</label>
                   <div class="form-group collapse in" id="checkPayment">
                   </div>
                 </div>
                 <div class="custome-radio">
-                  <input class="form-check-input" required="" type="radio" value="razorpay" name="payment_option" id="exampleRadios5" checked="">
-                  <label class="form-check-label" for="exampleRadios5" data-bs-toggle="collapse" data-target="#paypal" aria-controls="paypal">Razorpay</label>
+                  <input class="form-check-input" required="" type="radio" name="payment_option" value="wallet" id="exampleRadios2" checked="">
+                  <label class="form-check-label" for="exampleRadios2" data-bs-toggle="collapse" data-target="#wallet" aria-controls="wallet">Wallet</label>
+                  <div class="form-group collapse in" id="wallet">
+                  </div>
+                </div>
+                <div class="custome-radio">
+                  <input class="form-check-input" required="" type="radio" value="razorpay" name="payment_option" id="exampleRadios3" checked="">
+                  <label class="form-check-label" for="exampleRadios3" data-bs-toggle="collapse" data-target="#paypal" aria-controls="paypal">Razorpay</label>
                   <div class="form-group collapse in" id="paypal">
                   </div>
                 </div>
+
               </div>
             </div>
             <button type="button" class="btn btn-fill-out btn-block mt-30" onclick="proceedToPayment()">Proceed to payment</button>
@@ -473,12 +480,12 @@
 
   function removeAddress(userId) {
     Swal.fire({
-      title: 'Are you sure you want to log out?',
+      title: 'Are you sure you want to remove this address?',
       icon: 'warning',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Yes, log me out!',
+      confirmButtonText: 'Yes, remove it!',
       timer: 3000
     }).then((result) => {
       if (result.isConfirmed) {
@@ -499,7 +506,14 @@
       method: 'POST',
       data: $('#checkOut-form').serialize(),
       success: (response) => {
-        if (response.codStatus == true) {
+        if (response.error) {
+          Swal.fire({
+            title: 'Error!',
+            text: response.error,
+            icon: 'error',
+            timer: 5000
+          })
+        } else if ((response.codStatus == true) || (response.orderStatus == true)) {
           Swal.fire({
             title: 'Order Placed!',
             text: 'Your order has been placed successfully.',
@@ -514,8 +528,10 @@
           console.log(response.amount, '2');
         }
       }
+
     })
   }
+
 
   function razorpay(order) {
     console.log(order, 'order');
