--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -30,7 +30,7 @@
                     <a class="nav-link" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fi-rs-user mr-10"></i>Billing Address</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="" id="logout" ><i class="fi-rs-sign-out mr-10" ></i>Logout</a>
+                    <a class="nav-link" href="" id="logout"><i class="fi-rs-sign-out mr-10"></i>Logout</a>
                   </li>
                 </ul>
               </div>
@@ -48,40 +48,46 @@
                   </div>
                 </div>
                 <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
-                  <div class="card">
-                    <div class="card-header">
-                      <h5 class="mb-0">Your Orders</h5>
-                    </div>
-                    <div class="card-body">
-                      <div class="table-responsive">
-                        <table class="table">
-                          <thead>
-                            <tr>
-                              <th>No:</th>
-                              <th>Date</th>
-                              <th>Payment Mode</th>
-                              <th>Status</th>
-                              <th>Total</th>
-                              <th>Product Details</th>
-                            </tr>
-                          </thead>
-
-                          <% orders.orders.forEach(function(item,index) { %>
-                          <tbody>
-                            <tr>
-                              <td><%=index + 1%></td>
-                              <td><%= new Date(item.createdAt).toDateString()%></td>
-                              <td><%=item.paymentMethod%></td>
-                              <td><%=item.paymentStatus%></td>
-                              <td>$<%=item.totalPrice%></td>
-                              <td><button type="button" class="btn btn-primary" data-toggle="modal" id="order" onclick="findProduct('<%=item._id%>')"  data-whatever="@mdo">Product Details</button></td>
-                            </tr>
-                          </tbody>
-                          <% }); %>
-                        </table>
-                      </div>
+                
+                    
+                  <div class="card-body">
+                    <div class="table-responsive custom-table">
+                      <table class="table table-custom">
+                        <thead>
+                          <tr>
+                            <th>No:</th>
+                            <th>Date</th>
+                            <th>Payment Mode</th>
+                            <th>Payment Status</th>
+                            <th>Order Status</th>
+                            <th>Total</th>
+                            <th>Product Details</th>
+                          </tr>
+                        </thead>
+                        <% orders?.orders.forEach(function(item,index) { %>
+                        <tbody>
+                          <tr>
+                            <td><%=index + 1%></td>
+                            <td><%= new Date(item.createdAt).toDateString()%></td>
+                            <td><%=item.paymentMethod%></td>
+                            <td><%=item.paymentStatus%></td>
+                            <td><%=item.orderConfirm%></td>
+                            <td>$<%=item.totalPrice%></td>
+                            <td>
+                              <center>
+                                <button type="button" id="details">
+                                  <a href="/order-details/<%=item._id%>">Details</a>
+                                </button>
+                              </center>
+                            </td>
+                          </tr>
+                        </tbody>
+                        <% }); %>
+                      </table>
                     </div>
                   </div>
+                  
+                  
                 </div>
                 <div class="tab-pane fade" id="track-orders" role="tabpanel" aria-labelledby="track-orders-tab">
                   <div class="card">
@@ -109,30 +115,30 @@
                   </div>
                 </div>
                 <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
-                    <div class="row">
-                      <% address?.Address.forEach(function(item) { %>
+                  <div class="row">
+                    <% address?.Address.forEach(function(item) { %>
                     <div class="col-lg-6">
                       <div class="card mb-3 mb-lg-0">
-                          <div class="card-header">
-                              <h5 class="mb-0">Billing Address</h5>
-                            </div>
-                            <div class="card-body">
-                                <strong><%=item.fname%>  <%=item.lname%></strong>
-                                <address> 
-                                   <%=item.street%> ,
-                                   <%=item.appartment%> <br>
-                                   <%=item.city%> ,
-                                   <%=item.zipcode%> ,
-                                   <%=item.state%> <br>
-                                   <%=item.phone%> ,
-                                   <%=item.email%>
-               
-                                </address>
+                        <div class="card-header">
+                          <h5 class="mb-0">Billing Address</h5>
+                        </div>
+                        <div class="card-body">
+                          <strong><%=item.fname%> <%=item.lname%></strong>
+                          <address>
+                            <%=item.street%> ,
+                            <%=item.appartment%> <br>
+                            <%=item.city%> ,
+                            <%=item.zipcode%> ,
+                            <%=item.state%> <br>
+                            <%=item.phone%> ,
+                            <%=item.email%>
+
+                          </address>
                           <a href="#" class="btn-small">Edit</a>
                         </div>
+                      </div>
                     </div>
-                </div>
-                <% }); %>
+                    <% }); %>
                     <!-- <div class="col-lg-6">
                       <div class="card">
                         <div class="card-header">
@@ -154,8 +160,8 @@
                       <h5>Billing Address</h5>
                     </div>
                     <div class="card-body">
-                      <form >
-            
+                      <form>
+
                         <div class="form-group">
                           <input type="text" required="" name="fname" id="fname" placeholder="First name *">
                           <p id="err" class="text-danger"></p>
@@ -194,9 +200,9 @@
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                          <button type="button" class="btn btn-primary" onclick="validate()" >Save</button>
+                          <button type="button" class="btn btn-primary" onclick="validate()">Save</button>
                         </div>
-                       
+
                       </form>
                     </div>
                   </div>
@@ -210,9 +216,9 @@
   </section>
 </main>
 
-<!-- modal for viewing the products -->
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true"  >
-  <div class="modal-dialog modal-lg " role="document" >
+<!-- modal for viewing the products
+<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg " role="document">
     <div class="modal-content ">
       <div class="modal-header ">
         <h5 class="modal-title" id="exampleModalLabel">Product Details</h5>
@@ -222,15 +228,17 @@
       </div>
       <div class="modal-body ">
         <div class="row">
-         
+
           <div class="col-md-6">
-        
+            <img src="" alt="">
+            <h6></h6>
+            <p></p>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
@@ -238,22 +246,67 @@
   p#err {
     font-size: 12px;
   }
+
   .img-thumbnail {
-  max-width: 150px; /* or any other value that suits your needs */
+    max-width: 150px;
+    /* or any other value that suits your needs */
+  }
+
+  /* Details button */
+  #details {
+  
+  color: #000000;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+#details:hover {
+  background-color: #171616;
+}
+
+/* order list table  */
+.table-custom {
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+}
+
+.table-custom th {
+  background-color: #f2f2f2;
+  color: #333333;
+  font-weight: bold;
+}
+
+.table-custom td {
+  padding: 10px;
+}
+
+.table-custom a {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #a8729a;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.table-custom a:hover {
+  background-color: #8c5f83;
 }
 
 
-#productModal {
- width: auto;
- 
-}
+
 
 
 </style>
 <script>
-// for adding new address
+  // for adding new address
 
-function validate() {
+  function validate() {
     const fname = document.getElementById('fname')
     const lname = document.getElementById('lname')
     const street = document.getElementById('street')
@@ -367,51 +420,43 @@ function validate() {
   }
 
   // logout
-$('#logout').on('click', function(event) {
-  event.preventDefault();
-  Swal.fire({
-    title: 'Are you sure you want to log out?',
-    icon: 'warning',
-    showCancelButton: true,
-    confirmButtonColor: '#3085d6',
-    cancelButtonColor: '#d33',
-    confirmButtonText: 'Yes, log me out!',
-    timer: 3000
-  }).then((result) => {
-    if (result.isConfirmed) {
-      $.ajax({
-        url : '/logout',
-        method : 'GET'
-      });
-      Swal.fire({
-        title: 'Logout Successful!!',
-        text: "You are not logged in!",
-        icon: 'success',
-        timer: 5000
-      }).then((result) => {
-          window.location.href = '/login'; 
-      });
-    }
+  $('#logout').on('click', function(event) {
+    event.preventDefault();
+    Swal.fire({
+      title: 'Are you sure you want to log out?',
+      icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, log me out!',
+      timer: 3000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url: '/logout',
+          method: 'GET'
+        });
+        Swal.fire({
+          title: 'Logout Successful!!',
+          text: "You are not logged in!",
+          icon: 'success',
+          timer: 5000
+        }).then((result) => {
+          window.location.href = '/login';
+        });
+      }
+    });
   });
-});
 
 
-// ajax call for viewing the products
 
-function findProduct(orderId){
-  $.ajax({
-    url : '/order-product/' + orderId,
-    method : 'GET',
-    success:(product)=>{
-      product.forEach((item)=>{
-        let img = $('<img>').attr('src', '/productImages/' + item.image[0]).addClass('img-thumbnail');
-        let name = $('<h6>').text(item.productName);
-        let price = $('<p>').text('$' + item.productPrice.toFixed(2));
-        $('.modal-body').append(img, name, price);
-      })
-      $('#productModal').modal('show');
-    }
-  })
-}
 
+  // ajax call for returning order
+
+  function returnOrder(orderId){
+    $.ajax({
+      url: '/return-order/' + orderId,
+      method: 'POST'
+    })
+  }
 </script>
