--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -15,21 +15,16 @@
           <span class="text">Dashboard</span>
         </a>
       </li>
-      <li class="menu-item has-submenu">
-        <a class="menu-link" href="page-products-list.html"> <i class="icon material-icons md-shopping_bag"></i>
+      <li class="menu-item">
+        <a class="menu-link" href="/admin/productList">
+          <i class="icon material-icons md-shopping_bag"></i>
           <span class="text">Products</span>
         </a>
-        <div class="submenu">
-          <a href="/admin/productList">Product List</a>
-        </div>
       </li>
-      <li class="menu-item has-submenu">
-        <a class="menu-link" href="page-products-list.html"> <i class="icon material-icons md-shopping_bag"></i>
+      <li class="menu-item ">
+        <a class="menu-link" href="/admin/addCategory"> <i class="icon material-icons md-shopping_bag"></i>
           <span class="text">Categories</span>
         </a>
-        <div class="submenu">
-          <a href="/admin/addCategory">Category List</a>
-        </div>
       </li>
       <!-- <li class="menu-item has-submenu">
         <a class="menu-link" href="page-orders-1.html"> <i class="icon material-icons md-shopping_cart"></i>
@@ -60,15 +55,15 @@
           <a href="page-transactions-2.html">Transaction 2</a>
         </div>
       </li> -->
-      <li class="menu-item has-submenu">
-        <a class="menu-link" href="#"> <i class="icon material-icons md-person"></i>
-          <span class="text">User</span>
+      <li class="menu-item">
+        <a class="menu-link" href="/admin/userList"> <i class="icon material-icons md-person"></i>
+          <span class="text">Users</span>
         </a>
-        <div class="submenu">
-          <a href="/admin/userList">User List</a>
-          <!-- <a href="page-account-register.html">User registration</a>
-          <a href="page-error-404.html">Error 404</a> -->
-        </div>
+      </li>
+      <li class="menu-item">
+        <a class="menu-link" href="/admin/coupon-list"> <i class="icon material-icons md-person"></i>
+          <span class="text">Coupons</span>
+        </a>
       </li>
       <!-- <li class="menu-item">
         <a class="menu-link" href="page-reviews.html"> <i class="icon material-icons md-comment"></i>
@@ -158,9 +153,9 @@
             <% if(locals.admin){ %>
             <a class="dropdown-item text-danger" href="/admin/logout"><i class="material-icons md-exit_to_app"></i>Logout</a>
             <% }else{ %>
-              <a class="dropdown-item text-danger" href="/admin/login"><i class="material-icons md-exit_to_app"></i>Login</a>
-              <% } %>
-            </div>
+            <a class="dropdown-item text-danger" href="/admin/login"><i class="material-icons md-exit_to_app"></i>Login</a>
+            <% } %>
+          </div>
         </li>
       </ul>
     </div>
