--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -120,7 +120,7 @@
                     <tr>
                       <td class="cart_total_label">Cart Subtotal</td>
 
-                      <td class="cart_total_amount">₹<span class="font-lg fw-900 text-brand" id="total"><%=total %></span></td>
+                      <td class="cart_total_amount">₹<span class="font-lg fw-900 text-brand" id="subTotal"><%=total %></span></td>
 
                     </tr>
                     <tr>
@@ -214,6 +214,7 @@
             qtyElem.innerText = response.newQuantity;
             const subTotalVal = document.querySelector(`#subTotal-${proId}`);
             subTotalVal.innerText = '₹' + response.subTotal.totals[index];
+            document.getElementById('subTotal').innerHTML = response.total
             document.getElementById('total').innerHTML = response.total
             // location.reload()
           }
