--- a/views/admin/addCoupon.ejs
+++ b/views/admin/addCoupon.ejs
@@ -134,7 +134,7 @@ function submit(coupon, validity, minAmount, minDiscountPercentage, maxDiscount,
         data : {
             coupon : coupon,
             validity : validity,
-            minAmount : minAmount,
+            minPurchase : minAmount,
             minDiscountPercentage : minDiscountPercentage,
             maxDiscount : maxDiscount,
             description : description
